Pruebas de cv y repuesta

--- a/snack_backend/src/main/resources/application.properties
+++ b/snack_backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=snack_backend
+spring.datasource.url=jdbc:postgresql://localhost:5432/snack_db
+spring.datasource.username=postgres
+spring.datasource.password=master.1
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
